fix (accounting): improve styling in vatreport
make it look more like the other components (use existing classes for navigation++). Still needs some improvement for the widgetbar (the content does not fit well with the existing proposal for the widget bar)

closes #1131

--- a/src/styles/specifics/accounting/_vatReportView.sass
+++ b/src/styles/specifics/accounting/_vatReportView.sass
@@ -1,5 +1,7 @@
 vat-report-view
     .vatreportheader
+        display: inline-block
+    
         .title
             padding: 0 4rem
 
@@ -10,22 +12,6 @@ vat-report-view
             time
                 font-size: .9rem
 
-        .periodNavigation
-            float: right
-            margin-right: 5rem
-            button
-                width: 2.5rem
-                height: 2.5rem
-                padding: 0
-                text-align: center
-                line-height: 2.5rem
-                border-radius: .4rem
-                font-size: 1.7rem
-                margin: .3rem
-                background-color: $uni-color-scale9
-                border: .1rem solid $uni-color-scale6
-                color: black
-
         .unit
             margin-bottom: 0
 
@@ -35,32 +21,14 @@ vat-report-view
 
         .container
             background-color: $uni-color-scale9
-            border: .1rem solid $uni-color-scale7
-            margin: 0 2rem
+            border: .1rem solid $uni-color-scale7            
 
         .box
             padding-left: 2rem
             margin-bottom: 1rem
-
-        .left
+            width: calc(33% - 2rem)
             float: left
-
-        .right
-            float: right
-
-        .center
-            width: 25%
-            margin: 0 auto
-
-        .horizontal_nav ul
-            border-top: .15rem solid $uni-color-scale7
-            background-color: $uni-color-negative
-            a
-                color: black
-
-                &.active, &:hover
-                    background-color: $uni-color-scale8
-
+       
         table
             margin-top: 1rem
 
